--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 KERNEL_SOURCE=https://github.com/Lwc1998/android_kernel_xiaomi_nabu
 KERNEL_SOURCE_BRANCH=arrow-rebase
 KERNEL_DEFCONFIG=nuba_defconfig
-KERNEL_FILE=Image.gz-dtb
+KERNEL_FILE=Image-dtb
 TARGET_ARCH=arm64
 
 # Clang
